Style tv show section and scrollbar fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 /* Unitily classes */
 body {
   font-family: 'Roboto Slab', serif;
-  background: #3B4252!important;
+  background: #3B4252 !important;
   min-width: 700px;
 }
 
@@ -11,9 +11,15 @@ body {
 }
 
 /* Main */
+.movies h2,
+.tv_shows h2 {
+  font-weight: 600;
+  color: #DB202B;
+}
+
 .list-group-item,
 .card {
-  background-color: #4C566A!important;
+  background-color: #4C566A !important;
   color: #ECEFF4;
 }
 
@@ -22,22 +28,21 @@ body {
   font-size: 0.9rem;
   max-height: 100px;
 }
+
 /* Scrollbar */
 ::-webkit-scrollbar {
-    width: 6px;
+ width: 6px;
+ height: 8px;
 }
-
-/* Track */
-::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
-}
-
-/* Handle */
 ::-webkit-scrollbar-thumb {
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
-    background: #D8DEE9;
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+ background: linear-gradient(15deg, #eceff4 30%,#d8dee9 60%);
+ border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:hover{
+ background: linear-gradient(15deg, #eceff4 30%,#d8dee9 60%);
+}
+::-webkit-scrollbar-track{
+ background: #2e3440;
+ border-radius: 10px;
+ box-shadow: inset -3px 3px 6px #d8dee9;
 }
